fixes #195 container is now narrower to prevent a horizontal scrollbar from appearing

--- a/webroot/css/tourdb.css
+++ b/webroot/css/tourdb.css
@@ -18,7 +18,7 @@ a:HOVER		{ text-decoration: underline; }
 a img		{ vertical-align: middle; border: 0; }
 
 #page		{  }
-#container	{ width: 1010px; margin: 0 auto; }
+#container	{ width: 1005px; margin: 0 auto; }
 
 #header		{ height: 80px; text-align: right; }
 
